--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "ts-node src/lib.ts",
     "watch": "ts-node-dev src/lib.ts",
     "dev": "npm run clean && npm run watch",
+    "lint": "eslint . --ext .ts",
     "build:dev": "tsc --project tsconfig.json",
     "build:prod": "tsc --project tsconfig.prod.json",
     "clean": "rimraf dist/",
@@ -29,7 +30,10 @@
     "@babel/preset-typescript": "^7.12.1",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.7",
+    "@typescript-eslint/eslint-plugin": "^4.7.0",
+    "@typescript-eslint/parser": "^4.7.0",
     "babel-jest": "^26.6.3",
+    "eslint": "^7.13.0",
     "jest": "^26.6.3",
     "prettier": "^2.1.2",
     "rimraf": "^3.0.2",
